--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <body>
   <div id="app">
     <div id="loading-bg">
-      <div class="loading-logo">
-        <!-- SVG Logo -->
+      <!-- <div class="loading-logo">
         <svg width="86" height="48" viewBox="0 0 30 24" xmlns="http://www.w3.org/2000/svg">
           <g fill="none" fill-rule="evenodd">
             <path d="M30 21.392a2 2 0 0 1-3.027 1.716l-3.258-1.95a2 2 0 0 1-.973-1.716l-.001-6.7L15
@@ -29,7 +28,7 @@
               fill="#FFF" />
           </g>
         </svg>
-      </div>
+      </div> -->
       <div class="loading">
         <div class="effect-1 effects"></div>
         <div class="effect-2 effects"></div>
